[package]
name = "caster"
version = "0.1.0"
edition = "2021"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
description = "🚀 Publish stdout via http."
categories = [
    "command-line-utilities",
    "network-programming"
]
keywords = [
    "cli",
    "publish",
    "service",
]
repository = "https://github.com/mihaigalos/caster"
license = "MIT"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }