[package]
name = "caster"
version = "0.2.2"
edition = "2021"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
description = "🚀 Publish stdout via http."
categories = [
    "command-line-utilities",
    "network-programming"
]
keywords = [
    "cli",
    "publish",
    "service",
]
repository = "https://github.com/mihaigalos/caster"
license = "MIT"

[dependencies]
autoclap = "0.2.1"
clap = "3.0.13"
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.11", features = ["util"] }