[package]
name = "caster"
version = "0.3.0"
edition = "2021"
authors = ["Mihai Galos <mihaigalos@gmail.com>"]
description = "🚀 Publish stdout via http."
categories = [
    "command-line-utilities",
    "network-programming"
]
keywords = [
    "cli",
    "publish",
    "service",
]
repository = "https://github.com/mihaigalos/caster"
license = "MIT"

[dependencies]
autoclap = "0.3.14"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["cargo", "string"] }
colored = "2.0.0"
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.11", features = ["util"] }
